third_party/rust/chromium_crates_io/vendor/zerocopy-0.7.35/tests/ui-msrv/transmute-dst-not-frombytes.stderr
error[E0277]: the trait bound `NotZerocopy: FromBytes` is not satisfied
  --> tests/ui-msrv/transmute-dst-not-frombytes.rs:18:41
   |
18 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ the trait `FromBytes` is not implemented for `NotZerocopy`
   |
note: required by a bound in `AssertIsFromBytes`
  --> tests/ui-msrv/transmute-dst-not-frombytes.rs:18:41
   |
18 | const DST_NOT_FROM_BYTES: NotZerocopy = transmute!(AU16(0));
   |                                         ^^^^^^^^^^^^^^^^^^^ required by this bound in `AssertIsFromBytes`
   = note: this error originates in the macro `transmute` (in Nightly builds, run with -Z macro-backtrace for more info)
